--- a/client/src/components/AuthCard/AuthCard.module.css
+++ b/client/src/components/AuthCard/AuthCard.module.css
@@ -14,9 +14,10 @@
 
 .card-header {
   text-align: center;
+  font-size: 1.5rem;
   color: white;
   background-color: blue;
-  height: 50px;
+  height: 40px;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
