--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
-html, body, #root {
-  height: 100vh
+html,
+body,
+#root {
+  height: 100vh;
+  background-color: #f1f1ef;
+}
+
+.nav {
+  background-color: #578062;
 }
