make typewriter effect and font responsive

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,8 @@ body,
   height: 100vh;
   background-image: url("./assets/news-background.png");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .nav {
