--- a/client/src/components/TypewriterContent/TypewriterContent.module.css
+++ b/client/src/components/TypewriterContent/TypewriterContent.module.css
@@ -7,62 +7,26 @@
 .typed-out-3 {
   white-space: nowrap;
   overflow: hidden;
-  margin: 0.5rem auto;
+  margin: 0%;
   font-family: "Major Mono Display", monospace;
-  font-size: 2rem;
+  font-size: 5vw;
   font-weight: bold;
 }
 
 .typed-out-1 {
-  /* border-right: 2px solid rgba(17, 17, 17, 0.9); */
-
   animation: animated-text__1 2s steps(30, end) 1s 1 normal both;
-  /* animated-cursor__1 900ms steps(30, end) 8; */
 }
 
 .typed-out-2 {
-  /* border-right: 2px solid rgba(17, 17, 17, 0.9); */
-
   animation: animated-text__2 2s steps(30, end) 1s 1 normal both;
-  /* animated-cursor__2 900ms steps(30, end) infinite; */
   -webkit-animation-delay: 3s;
   animation-delay: 3s;
 }
 
 .typed-out-3 {
-  /* border-right: 2px solid rgba(17, 17, 17, 0.9); */
-
   animation: animated-text__3 2s steps(30, end) 1s 1 normal both;
-  /* animated-cursor__3 900ms steps(30, end) infinite; */
   -webkit-animation-delay: 5s;
   animation-delay: 5s;
-}
-
-@keyframes animated-cursor__1 {
-  from {
-    border-right-color: rgba(255, 255, 255, 0.8);
-  }
-  to {
-    border-right-color: rgba(255, 255, 255, 0.8);
-  }
-}
-
-@keyframes animated-cursor__2 {
-  from {
-    border-right-color: rgba(17, 17, 17, 0.9);
-  }
-  to {
-    border-right-color: rgba(255, 255, 255, 0.8);
-  }
-}
-
-@keyframes animated-cursor__3 {
-  from {
-    border-right-color: rgba(17, 17, 17, 0.9);
-  }
-  to {
-    border-right-color: rgba(255, 255, 255, 0.8);
-  }
 }
 
 @keyframes animated-text__1 {
@@ -70,7 +34,7 @@
     width: 0;
   }
   to {
-    width: 35rem;
+    width: 100%;
   }
 }
 
@@ -79,15 +43,6 @@
     width: 0;
   }
   to {
-    width: 45rem;
-  }
-}
-
-@keyframes animated-text__3 {
-  from {
-    width: 0;
-  }
-  to {
-    width: 45rem;
+    width: 100%;
   }
 }
