remove Typewriter animation, remove AppContent component files

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@ body,
 #root {
   height: 100vh;
   background-image: url("./assets/news-background.png");
+  background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
