--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -3,3 +3,17 @@
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
+.invalid {
+  background-color: rgb(255, 189, 202);
+  border-color: crimson;
+}
+
+.message {
+  color: crimson;
+  padding-top: 5px;
+  font-size: 0.85rem;
+  font-weight:bold
+}
+
+
