--- a/client/src/components/AuthCard/AuthCard.module.css
+++ b/client/src/components/AuthCard/AuthCard.module.css
@@ -9,7 +9,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 30%;
   min-width: 250px;
-  height: 350px;
+  height: auto;
   background-color: #91c79f;
   font-family: "Roboto", sans-serif;
 }
