update background, update folder naming

--- a/client/src/components/AuthCard/AuthCard.module.css
+++ b/client/src/components/AuthCard/AuthCard.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 50px;
+  margin-top: 15%;
   animation-duration: 1s;
   animation-name: fadein;
 }
