--- a/client/src/components/User/UserCard.module.css
+++ b/client/src/components/User/UserCard.module.css
@@ -4,6 +4,13 @@
   margin: 0.5%
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .card-image {
   width: 100%;
   height: auto
