--- a/client/src/components/AuthCard/AuthCard.module.css
+++ b/client/src/components/AuthCard/AuthCard.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 15%;
+  margin-top: 100px;
   animation-duration: 1s;
   animation-name: fadein;
 }
