add loading spinner and edit styling of message when search returns no results

--- a/client/src/components/User/UserCard.module.css
+++ b/client/src/components/User/UserCard.module.css
@@ -16,6 +16,15 @@
   height: auto
 }
 
+.loading-spinner, .no-results {
+  display: flex;
+  justify-content: center;
+}
+
+.no-results {
+  color: white
+}
+
 .searchInput {
   width: 50%;
   min-width: 300px;
