--- a/client/src/components/User/UserCard.module.css
+++ b/client/src/components/User/UserCard.module.css
@@ -1,7 +1,8 @@
 .card {
   padding-left: 0px;
   padding-right: 0px;
-  margin: 3%
+  margin: 3%;
+  
 }
 
 .row {
@@ -14,6 +15,14 @@
 .card-image {
   width: 100%;
   height: auto
+}
+
+.card-description {
+  /* text-overflow: ellipsis; */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; 
+  overflow: hidden;
 }
 
 .loading-spinner, .no-results {
