add link to favorites card to direct user to url of article

--- a/client/src/components/User/UserCard.module.css
+++ b/client/src/components/User/UserCard.module.css
@@ -18,7 +18,6 @@
 }
 
 .card-description {
-  /* text-overflow: ellipsis; */
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical; 
@@ -47,4 +46,9 @@
   min-width: 300px;
   margin: 10px auto;
   display: table
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: space-evenly;
 }
